@@ -1,6 +1,11 @@
+2010-03-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* flickr/__init__.py, api.py: Added support for page argument on
+	  Flickr API.
+
 2010-03-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
-	* lib/plugins/: Added new conf for API reload interval.
+	* plugins/: Added new conf for API reload interval.
 
 2010-03-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
